--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -29,7 +29,7 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+$base-color: #2c3e50;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
