--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -283,10 +283,12 @@ footer {
     background: url(../images/lead-bg.jpg);
     background-size: cover;
     padding: 250px 15px;
+    max-height: 35vh;
 }
 
 #lead-content {
     position: relative;
+    bottom: 30px;
     z-index: 10;
     text-align: center;
 
